--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,7 @@ const { title, description, permalink, current } = Astro.props;
   <head>
     <BaseHead title={title} description={description} permalink={permalink} />
   </head>
-  <body>
+  <body class="sans-serif">
     <Header current={current} />
     <article>
       <slot />
