--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,7 +68,7 @@ const permalink = Astro.site?.href ?? "https://goude.se/";
     if (aphorisms[index]) aphorisms[index].classList.add("visible");
   </script>
 
-  <p>Begin here.</p>
+  <p>I use the terminal because it is distraction-free.</p>
 
   <section>
     <section>
