--- a/src/styles/math-quiz.css
+++ b/src/styles/math-quiz.css
@@ -11,7 +11,7 @@
   border-radius: 8px;
   padding: 1.5em;
   margin-bottom: 1em;
-  min-height: 180px;
+  height: 240px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -26,6 +26,8 @@
   font-size: 0.9em;
   color: #666;
   text-align: right;
+  height: 1.2em;
+  line-height: 1.2em;
 }
 
 [data-theme-dark] #progress {
@@ -36,15 +38,23 @@
   font-size: 2.5em;
   text-align: center;
   margin: 0.5em 0;
-  min-height: 1.2em;
+  height: 1.2em;
+  line-height: 1.2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #answer-input {
   font-size: 1.8em;
   text-align: center;
-  min-height: 1.2em;
+  height: 1.5em;
+  line-height: 1.5em;
   padding: 0.3em;
   color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 [data-theme-dark] #answer-input {
@@ -53,9 +63,12 @@
 
 #feedback {
   text-align: center;
-  min-height: 1.5em;
+  height: 1.8em;
+  line-height: 1.8em;
   font-size: 1.2em;
-  margin-top: 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .correct {
